--- a/css/editor.css
+++ b/css/editor.css
@@ -3,6 +3,48 @@ body {
 }
 
 .CodeMirror {
+	top:0px;
+	bottom:0px;
+	right:0px;
+	left:0px;
+	height : 100%;
+}
+
+#preview {
+	display:none;
+}
+
+#preview iframe{
 	width : 100%;
 	height : 100%;
+	border : 0px;
+}
+
+#c_editor {
+	height : 100%;
+}
+
+.nopadding {
+	
+	padding-left:0px;
+	padding-right:0px;
+}
+
+.btn-toolbar {
+
+	border-radius: 0;
+
+}
+#footer{
+	position: absolute;
+	height: 20px;
+	bottom: 0px;
+	width: 100%;
+	background-color:#eee;
+}
+#main{
+	position: absolute;
+	top: 34px;
+	bottom: 20px;
+	width: 100%;
 }
